--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+.App{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #09d3ac;
+p{
+  font-size: 20px;
+}
+.music{
+  display: flex;
+}
+.music div{
+  height: 100px;
+  width: 100px;
+  flex: 1;
+  cursor: pointer;
 }
