--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,43 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-.App{
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+.App {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   justify-content: space-between;
 }
-p{
+p {
   font-size: 20px;
 }
-.music{
+.music {
   display: flex;
 }
-.music div{
+.music div {
   height: 100px;
   width: 100px;
   flex: 1;
   cursor: pointer;
+}
+.Visuals div {
+  animation: ease 1s jump;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  position: absolute;
+  z-index: -1;
+}
+@keyframes jump {
+  0% {
+    bottom: 0;
+    left: 20%;
+  }
+  50% {
+    bottom: 50%;
+    left: 50%;
+  }
+  100% {
+    bottom: 0;
+    left: 80%;
+  }
 }
